nav bölümü ve gövdenin bir kısmının temeli atıldı, görselleştirme yapılmadı. öğeler konumlandırıldı.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Google Landing Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="./images/images/favicon.png"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
+    <div class="header-nav">
+      <header class="navigation">
+        <div class="div1">
+          <a href="">About</a>
+          <a href="">Store</a>
+        </div>
+        <div class="div2">
+          <a href="">Gmail</a>
+          <a href="">Images</a>
+          <button onclick="alert">
+            <img src="./images/images/appicon.png" alt="" /></button
+          ><button onclick="atob">Sign In</button>
+        </div>
+      </header>
+    </div>
+    <span> <img src="./images/images/googlelogo.png" alt="" /></span>
+    <form action="" class="search-google">
+        <input type="search" name="search" id="searchgoogle">
+    </form>
+  </body>
 </html>
