--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <span> <img src="./images/images/googlelogo.png" alt="" /></span>
     <form action="" class="search-google">
-        <input type="search" name="search" id="searchgoogle">
+      <input type="search" name="search" id="searchgoogle" class="search-icon"/>
     </form>
   </body>
 </html>
